--- a/Anketa(01.01)(1)/Anketa.csproj
+++ b/Anketa(01.01)(1)/Anketa.csproj
@@ -67,14 +67,9 @@
     <Compile Include="auth.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Entities.cs" />
     <Compile Include="genders.cs">
       <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="pages\DLL.xaml.cs">
-      <DependentUpon>DLL.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="pages\List.xaml.cs">
-      <DependentUpon>List.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model1.Context.cs">
       <AutoGen>True</AutoGen>
@@ -90,6 +85,13 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="PageChange.cs" />
+    <Compile Include="pages\DLL.xaml.cs">
+      <DependentUpon>DLL.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="pages\List.xaml.cs">
+      <DependentUpon>List.xaml</DependentUpon>
     </Compile>
     <Compile Include="pages\info.xaml.cs">
       <DependentUpon>info.xaml</DependentUpon>
@@ -113,6 +115,9 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="users.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="usersimage.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="users_to_traits.cs">
@@ -201,6 +206,14 @@
   <ItemGroup>
     <Resource Include="Image\1.jpg" />
     <Resource Include="Image\4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Dllpro\Dllpro.csproj">
+      <Project>{a63ccf85-0a9c-4c04-b9c2-1e53db39ed71}</Project>
+      <Name>Dllpro</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
@@ -211,12 +224,6 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Dllpro\Dllpro.csproj">
-      <Project>{a63ccf85-0a9c-4c04-b9c2-1e53db39ed71}</Project>
-      <Name>Dllpro</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
